[package]
name = "extend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
common = { path = "../common" }

[build-dependencies]
tonic-build = { workspace = true }
